    will be used for any errors inside the WebAuth library when reading or
    writing to files.  Now that WebAuth can report rich error messages,
    there is no need for the codes to be this specific.  Add new
    WA_ERR_FILE_NOT_FOUND error, which replaces WA_ERR_KEYRING_OPENREAD
    when the error is due to the file not existing.

WebAuth 4.3.3 (2012-11-05)

    Fix a memory initialization issue in the WebKDC that could cause
    incorrect handling of random multifactor verification, including
    requiring random multifactor when the WebAuth Application Server
    didn't request it.

    Fix a memory allocation error in the WebAuth Perl module that could
    cause memory corruption in the WebLogin server.

WebAuth 4.3.2 (2012-09-27)

    Fix a pool management bug when mod_webauth requested a service token
    from the WebKDC.  A premature release of an APR memory pool could
    result in a corrupted Kerberos authenticator, resulting in an
    inability to obtain new service tokens.

WebAuth 4.3.1 (2012-08-08)

    Allow WebAuthDoLogout in .htaccess files with AllowOverride
    AuthConfig.  Previously, WebAuthDoLogout could only be set in the
    Apache server configuration.

    Fix invalid free in webauth_webkdc_login when there are permitted
    realms configured.

    Add a replacement for krb5_cc_get_full_name for Kerberos libraries
    that don't have this function.  Fixes compilation against MIT Kerberos
    1.8 and earlier.

    Fix incorrect Perl module includes in pwchange.fcgi that prevented the
    WebLogin password change component from starting properly.

    Add an overloaded cmp operator for WebAuth::Exception, primarily to
    make testing easier.

    Document that while WebAuthLdapKeytab can be set in either the main
    server configuration or in a virtual host, separate configurations for
    different virtual hosts are not supported due to the way the module is
    currently implemented.

WebAuth 4.3.0 (2012-08-06)
