@@ -7,7 +7,7 @@
  * The canonical version of this file is maintained in the rra-c-util package,
  * which can be found at <http://www.eyrie.org/~eagle/software/rra-c-util/>.
  *
- * Copyright 2011 Russ Allbery <rra@stanford.edu>
+ * Copyright 2011, 2012 Russ Allbery <rra@stanford.edu>
  *
  * Permission is hereby granted, free of charge, to any person obtaining a
  * copy of this software and associated documentation files (the "Software"),
@@ -38,10 +38,10 @@
 
 BEGIN_DECLS
 
-/* sprintf into an allocated string, calling bail on allocation failure. */
-int basprintf(char **, const char *, ...)
+/* sprintf into an allocated string, calling bail on any failure. */
+void basprintf(char **, const char *, ...)
     __attribute__((__nonnull__, __format__(printf, 2, 3)));
-int bvasprintf(char **, const char *, va_list)
+void bvasprintf(char **, const char *, va_list)
     __attribute__((__nonnull__));
 
 END_DECLS
