@@ -68,75 +68,76 @@ plan 36
 
 # First run the tests expected to succeed.
 ok_xmalloc "malloc small"    0 "" "m" "21"      "0"
-ok_xmalloc "malloc large"    0 "" "m" "3500000" "0"
+ok_xmalloc "malloc large"    0 "" "m" "5500000" "0"
 ok_xmalloc "malloc zero"     0 "" "m" "0"       "0"
 ok_xmalloc "realloc small"   0 "" "r" "21"      "0"
-ok_xmalloc "realloc large"   0 "" "r" "3500000" "0"
+ok_xmalloc "realloc large"   0 "" "r" "5500000" "0"
 ok_xmalloc "strdup small"    0 "" "s" "21"      "0"
-ok_xmalloc "strdup large"    0 "" "s" "3500000" "0"
+ok_xmalloc "strdup large"    0 "" "s" "5500000" "0"
 ok_xmalloc "strndup small"   0 "" "n" "21"      "0"
-ok_xmalloc "strndup large"   0 "" "n" "3500000" "0"
+ok_xmalloc "strndup large"   0 "" "n" "5500000" "0"
 ok_xmalloc "calloc small"    0 "" "c" "24"      "0"
-ok_xmalloc "calloc large"    0 "" "c" "3500000" "0"
+ok_xmalloc "calloc large"    0 "" "c" "5500000" "0"
 ok_xmalloc "asprintf small"  0 "" "a" "24"      "0"
-ok_xmalloc "asprintf large"  0 "" "a" "3500000" "0"
+ok_xmalloc "asprintf large"  0 "" "a" "5500000" "0"
 ok_xmalloc "vasprintf small" 0 "" "v" "24"      "0"
-ok_xmalloc "vasprintf large" 0 "" "v" "3500000" "0"
+ok_xmalloc "vasprintf large" 0 "" "v" "5500000" "0"
 
-# Now limit our memory to 3.5MB and then try the large ones again, all of
+# Now limit our memory to 5.5MB and then try the large ones again, all of
 # which should fail.
 #
 # The exact memory limits used here are essentially black magic.  They need to
 # be large enough to allow the program to be loaded and do small allocations,
 # but not so large that we can't reasonably expect to allocate that much
-# memory normally.  3.5MB seems to work reasonably well on both Solaris and
-# Linux.
+# memory normally.  The amount of memory required varies a lot based on what
+# shared libraries are loaded, and if it's too small, all memory allocations
+# fail.  5.5MB seems to work reasonably well on both Solaris and Linux.
 #
 # We assume that there are enough miscellaneous allocations that an allocation
 # exactly as large as the limit will always fail.
 ok_xmalloc "malloc fail" 1 \
-    "failed to malloc 3500000 bytes at xmalloc.c line 38" \
-    "m" "3500000" "3500000"
+    "failed to malloc 5500000 bytes at xmalloc.c line 38" \
+    "m" "5500000" "5500000"
 ok_xmalloc "realloc fail" 1 \
-    "failed to realloc 3500000 bytes at xmalloc.c line 66" \
-    "r" "3500000" "3500000"
+    "failed to realloc 5500000 bytes at xmalloc.c line 66" \
+    "r" "5500000" "5500000"
 ok_xmalloc "strdup fail" 1 \
-    "failed to strdup 3500000 bytes at xmalloc.c line 97" \
-    "s" "3500000" "3500000"
+    "failed to strdup 5500000 bytes at xmalloc.c line 97" \
+    "s" "5500000" "5500000"
 ok_xmalloc "strndup fail" 1 \
-    "failed to strndup 3500000 bytes at xmalloc.c line 143" \
-    "n" "3500000" "3500000"
+    "failed to strndup 5500000 bytes at xmalloc.c line 143" \
+    "n" "5500000" "5500000"
 ok_xmalloc "calloc fail" 1 \
-    "failed to calloc 3500000 bytes at xmalloc.c line 167" \
-    "c" "3500000" "3500000"
+    "failed to calloc 5500000 bytes at xmalloc.c line 167" \
+    "c" "5500000" "5500000"
 ok_xmalloc "asprintf fail" 1 \
-    "failed to asprintf 3500000 bytes at xmalloc.c line 192" \
-    "a" "3500000" "3500000"
+    "failed to asprintf 5500000 bytes at xmalloc.c line 191" \
+    "a" "5500000" "5500000"
 ok_xmalloc "vasprintf fail" 1 \
-    "failed to vasprintf 3500000 bytes at xmalloc.c line 214" \
-    "v" "3500000" "3500000"
+    "failed to vasprintf 5500000 bytes at xmalloc.c line 210" \
+    "v" "5500000" "5500000"
 
 # Check our custom error handler.
-ok_xmalloc "malloc custom"    1 "malloc 3500000 xmalloc.c 38" \
-    "M" "3500000" "3500000"
-ok_xmalloc "realloc custom"   1 "realloc 3500000 xmalloc.c 66" \
-    "R" "3500000" "3500000"
-ok_xmalloc "strdup custom"    1 "strdup 3500000 xmalloc.c 97" \
-    "S" "3500000" "3500000"
-ok_xmalloc "strndup custom"   1 "strndup 3500000 xmalloc.c 143" \
-    "N" "3500000" "3500000"
-ok_xmalloc "calloc custom"    1 "calloc 3500000 xmalloc.c 167" \
-    "C" "3500000" "3500000"
-ok_xmalloc "asprintf custom"  1 "asprintf 3500000 xmalloc.c 192" \
-    "A" "3500000" "3500000"
-ok_xmalloc "vasprintf custom" 1 "vasprintf 3500000 xmalloc.c 214" \
-    "V" "3500000" "3500000"
+ok_xmalloc "malloc custom"    1 "malloc 5500000 xmalloc.c 38" \
+    "M" "5500000" "5500000"
+ok_xmalloc "realloc custom"   1 "realloc 5500000 xmalloc.c 66" \
+    "R" "5500000" "5500000"
+ok_xmalloc "strdup custom"    1 "strdup 5500000 xmalloc.c 97" \
+    "S" "5500000" "5500000"
+ok_xmalloc "strndup custom"   1 "strndup 5500000 xmalloc.c 143" \
+    "N" "5500000" "5500000"
+ok_xmalloc "calloc custom"    1 "calloc 5500000 xmalloc.c 167" \
+    "C" "5500000" "5500000"
+ok_xmalloc "asprintf custom"  1 "asprintf 5500000 xmalloc.c 191" \
+    "A" "5500000" "5500000"
+ok_xmalloc "vasprintf custom" 1 "vasprintf 5500000 xmalloc.c 210" \
+    "V" "5500000" "5500000"
 
 # Check the smaller ones again just for grins.
-ok_xmalloc "malloc retry"    0 "" "m" "21" "3500000"
-ok_xmalloc "realloc retry"   0 "" "r" "32" "3500000"
-ok_xmalloc "strdup retry"    0 "" "s" "64" "3500000"
-ok_xmalloc "strndup retry"   0 "" "n" "20" "3500000"
-ok_xmalloc "calloc retry"    0 "" "c" "24" "3500000"
-ok_xmalloc "asprintf retry"  0 "" "a" "30" "3500000"
-ok_xmalloc "vasprintf retry" 0 "" "v" "35" "3500000"
+ok_xmalloc "malloc retry"    0 "" "m" "21" "5500000"
+ok_xmalloc "realloc retry"   0 "" "r" "32" "5500000"
+ok_xmalloc "strdup retry"    0 "" "s" "64" "5500000"
+ok_xmalloc "strndup retry"   0 "" "n" "20" "5500000"
+ok_xmalloc "calloc retry"    0 "" "c" "24" "5500000"
+ok_xmalloc "asprintf retry"  0 "" "a" "30" "5500000"
+ok_xmalloc "vasprintf retry" 0 "" "v" "35" "5500000"
