@@ -157,6 +157,12 @@ WebAuth 4.4.0 (unreleased)
     WA_ERR_FILE_NOT_FOUND error, which replaces WA_ERR_KEYRING_OPENREAD
     when the error is due to the file not existing.
 
+    Update to rra-c-util 4.7:
+
+    * Fix probing for Heimdal's libroken to work with older versions.
+    * Checked asprintf variants are now void functions and cannot fail.
+    * Include a replacement strndup for systems that don't have it.
+
 WebAuth 4.3.3 (2012-11-05)
 
     Fix a memory initialization issue in the WebKDC that could cause
